updated gateway with new auth

--- a/netduino-with-gateway/Gateway/Sender/TestSender.csproj
+++ b/netduino-with-gateway/Gateway/Sender/TestSender.csproj
@@ -39,6 +39,9 @@
     <Reference Include="Newtonsoft.Json, Version=4.5.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.5.0.8\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
+    <Reference Include="RestSharp">
+      <HintPath>..\packages\RestSharp.104.4.0\lib\net4\RestSharp.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -46,9 +49,6 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
-    <Reference Include="WindowsAzure.Acs.Oauth2.Client">
-      <HintPath>..\packages\WindowsAzure.Acs.Oauth2.Client.1.1.9\lib\net40\WindowsAzure.Acs.Oauth2.Client.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="..\Gateway\ConfigurationSettings.cs">
