--- a/netduino-with-gateway/Gateway/Gateway/packages.config
+++ b/netduino-with-gateway/Gateway/Gateway/packages.config
@@ -3,6 +3,6 @@
   <package id="Microsoft.AspNet.SignalR.Client" version="1.1.3" targetFramework="net45" />
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="2.0.2.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="5.0.8" targetFramework="net45" />
-  <package id="WindowsAzure.Acs.Oauth2.Client" version="1.1.9" targetFramework="net45" />
+  <package id="RestSharp" version="104.4.0" targetFramework="net45" />
   <package id="WindowsAzure.ServiceBus" version="2.2.1.1" targetFramework="net45" />
 </packages>
