--- a/netduino-with-gateway/Gateway/Receiver/packages.config
+++ b/netduino-with-gateway/Gateway/Receiver/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Microsoft.AspNet.SignalR.Client" version="1.1.3" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net45" />
+  <package id="RestSharp" version="104.4.0" targetFramework="net45" />
 </packages>
