--- a/netduino-with-gateway/Gateway/Sender/packages.config
+++ b/netduino-with-gateway/Gateway/Sender/packages.config
@@ -2,5 +2,5 @@
 <packages>
   <package id="Microsoft.AspNet.SignalR.Client" version="2.0.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="5.0.8" targetFramework="net45" />
-  <package id="WindowsAzure.Acs.Oauth2.Client" version="1.1.9" targetFramework="net45" />
+  <package id="RestSharp" version="104.4.0" targetFramework="net45" />
 </packages>
