--- a/windowsphone/PhoneApp/packages.config
+++ b/windowsphone/PhoneApp/packages.config
@@ -5,4 +5,5 @@
   <package id="Microsoft.Bcl.Build" version="1.0.13" targetFramework="wp80" />
   <package id="Microsoft.Net.Http" version="2.1.10" targetFramework="wp80" />
   <package id="Newtonsoft.Json" version="4.5.11" targetFramework="wp80" />
+  <package id="RestSharp" version="104.4.0" targetFramework="wp80" />
 </packages>
