--- a/netduino-plus2/rf/transmitter/RFTransmission/RFTransmission.csproj
+++ b/netduino-plus2/rf/transmitter/RFTransmission/RFTransmission.csproj
@@ -32,7 +32,7 @@
   </PropertyGroup>
   <Import Project="$(NetMfTargetsBaseDir)$(TargetFrameworkVersion)\CSharp.Targets" />
   <ItemGroup>
-    <Compile Include="DIO_RfTransmitter.cs" />
+    <Compile Include="RfTransmitter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
   </ItemGroup>
