--- a/tutorial/packages.config
+++ b/tutorial/packages.config
@@ -2,5 +2,5 @@
 <packages>
   <package id="Microsoft.AspNet.SignalR.Client" version="1.1.2" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="5.0.6" targetFramework="net45" />
-  <package id="WindowsAzure.Acs.Oauth2.Client" version="1.1.1" targetFramework="net45" />
+  <package id="RestSharp" version="104.4.0" targetFramework="net45" />
 </packages>
